--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 flake8 = "^7.1.2"
 black = "^25.1.0"
 django-cors-headers = "^4.7.0"
+httpie = "^3.2.4"
 
 
 [build-system]
